# trading-fitness

./: .gitignore  .mcp.json  .releaserc.yml  BOOTSTRAP_POLYGLOT_MONOREPO.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RESUME.md  mise.toml  package-lock.json  package.json  sgconfig.yml
.claude/skills/bun/: SKILL.md
.claude/skills/python/: SKILL.md
.claude/skills/rust/: SKILL.md
.mise/tasks/release/: full  preflight  version
config/: forensic.toml
data/nav_data_custom/: suresh.csv
docs/: ARCHITECTURE.md  ITH.md  LOGGING.md  SRED.md
docs/adr/: 2026-01-27-symmetric-dogfooding-rangebar.md  2026-01-29-rangebar-py-upgrade.md
docs/features/: SUPPRESSION_REGISTRY.md
docs/forensic/: E2E.md
docs/infrastructure/: DATA.md
docs/plans/: 2026-01-25-multi-view-feature-architecture-plan.md  2026-01-25-observability-telemetry-plan.md
docs/research/: 2026-01-23-statistical-methods-clarifications-gemini.md  2026-01-23-statistical-methods-implementation-claude-research.md  2026-01-23-statistical-methods-verification-gemini.md
scripts/: benchmark.py  precompute_historical_data.py  precompute_historical_parallel.py  precompute_ouroboros_year.py  validate_edge_cases.py
scripts/migrations/: 001_add_exchange_session_columns.sql  002_add_inter_bar_columns.sql  003_add_incremental_feature_anchor_columns.sql
services/data-ingestion/: CLAUDE.md
services/execution-gateway/: CLAUDE.md
services/strategy-engine/: CLAUDE.md
